complete task looper
